--- a/Bonsai.PointGrey/Bonsai.PointGrey.csproj
+++ b/Bonsai.PointGrey/Bonsai.PointGrey.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="FlyCapture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="Properties\AssemblyInfo.Generated.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Externals\Bonsai\Bonsai\Bonsai.csproj">
@@ -89,6 +90,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildProjectDirectory)\..\MSBuild\AssemblyInfo.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetDir)*.*" "$(ProjectDir)..\Externals\Bonsai\Packages\$(PlatformName)\$(ConfigurationName)\" /d /y</PostBuildEvent>
   </PropertyGroup>
