Updated FlyCapture to output both image data and metadata including GPIO pins.

--- a/Bonsai.PointGrey/Bonsai.PointGrey.csproj
+++ b/Bonsai.PointGrey/Bonsai.PointGrey.csproj
@@ -65,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FlyCapture.cs" />
+    <Compile Include="FlyCaptureDataFrame.cs" />
+    <Compile Include="GpioPinState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
   </ItemGroup>
