--- a/Bonsai.PointGrey/Bonsai.PointGrey.nuspec
+++ b/Bonsai.PointGrey/Bonsai.PointGrey.nuspec
@@ -20,6 +20,7 @@
     </dependencies>
   </metadata>
   <files>
+    <file src="Bonsai.PointGrey.props" target="build\net45"/>
     <file src="Bonsai.PointGrey.targets" target="build\net45"/>
     <file src="..\Externals\FlyCapture2Managed\net\**\*.dll" target="build\net45\bin"/>
     <file src="..\Externals\FlyCapture2Managed\native\**\*.dll" target="build\native\bin"/>
