Updated PointGrey nuget package specification.

--- a/Bonsai.PointGrey/Bonsai.PointGrey.nuspec
+++ b/Bonsai.PointGrey/Bonsai.PointGrey.nuspec
@@ -6,12 +6,12 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>https://bitbucket.org/horizongir/bonsai/raw/0391fb050a80c94f8ff45c861678a41ae97ca257/LICENSE</licenseUrl>
+    <licenseUrl>https://bitbucket.org/horizongir/bonsai.experimental/raw/99b1de21869b100740702dbd68061ea1b58c16db/Bonsai.PointGrey/LICENSE</licenseUrl>
     <projectUrl>https://bitbucket.org/horizongir/bonsai</projectUrl>
     <iconUrl>https://bitbucket.org/horizongir/bonsai/raw/7aacc64dc4647e57362ab310238591dc197fef0d/Resources/Bonsai.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>Gonçalo Lopes © 2014</copyright>
+    <copyright>Gonçalo Lopes © 2015</copyright>
     <tags>Bonsai PointGrey FlyCapture</tags>
   </metadata>
   <files>
