--- a/Bonsai.PointGrey/Bonsai.PointGrey.csproj
+++ b/Bonsai.PointGrey/Bonsai.PointGrey.csproj
@@ -44,7 +44,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="FlyCapture2Managed_v100">
-      <HintPath>..\Externals\FlyCapture2Managed\net\x86\FlyCapture2Managed_v100.dll</HintPath>
+      <HintPath>..\Externals\FlyCapture2Managed\net\x64\FlyCapture2Managed_v100.dll</HintPath>
     </Reference>
     <Reference Include="OpenCV.Net, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenCV.Net.3.3.1\lib\net40\OpenCV.Net.dll</HintPath>
@@ -89,6 +89,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <StartAction>Program</StartAction>
+    <StartProgram>$(registry:HKEY_CURRENT_USER\Software\Goncalo Lopes\Bonsai@InstallDir)Bonsai64.exe</StartProgram>
+    <StartArguments>--lib:"$(TargetDir)."</StartArguments>
+  </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
