Adding a bunch of stuff to alleviate future headaches
- Im just including driver installers that work right in the repo
- Some instructions on usage in README
- Some updates to nuget spec that seem to work

--- a/Bonsai.PointGrey/Bonsai.PointGrey.nuspec
+++ b/Bonsai.PointGrey/Bonsai.PointGrey.nuspec
@@ -18,6 +18,6 @@
     <file src="Bonsai.PointGrey.props" target="build\net45"/>
     <file src="Bonsai.PointGrey.targets" target="build\net45"/>
     <file src="..\Externals\FlyCapture2Managed\net\**\*.dll" target="build\net45\bin"/>
-    <file src="..\Externals\FlyCapture2Managed\native\**\*.dll" target="build\native\bin"/>
+    <!--<file src="..\Externals\FlyCapture2Managed\native\**\*.dll" target="build\native\bin"/>-->
   </files>
 </package>
